Pushing v248 from API 0cd4ab24dc8c912540fe06e8ab12d94736231321

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -18291,7 +18291,6 @@ components:
         - type
         - operator
         - key
-        - fact
         - argument
       description: >-
         A 'concrete' conditional (in contrast to a 'compound' one) takes a fact, some fixed
@@ -19382,9 +19381,11 @@ components:
               item:
                 $ref: "#/components/schemas/Question"
               response: {}
+              value: {}
             required:
               - item
               - response
+              - value
           description:
             The individual responses that capture the author's answers to corresponding items within
             the form version.,
