--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -12231,7 +12231,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/notification_preferences"
-      x-name: retrieveForMember
+      x-methodName: retrieveForMember
       x-belongsToResource: notification_preferences
     post:
       parameters:
@@ -12281,7 +12281,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/notification_preferences"
-      x-name: updateForMember
+      x-methodName: updateForMember
       x-belongsToResource: notification_preferences
   "/v1/users/{recipient}/notification_preferences":
     get:
@@ -12303,7 +12303,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/notification_preferences"
-      x-name: retrieveForUser
+      x-methodName: retrieveForUser
       x-belongsToResource: notification_preferences
     post:
       parameters:
@@ -12353,7 +12353,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/notification_preferences"
-      x-name: updateForUser
+      x-methodName: updateForUser
       x-belongsToResource: notification_preferences
   /v1/orders:
     post:
@@ -13866,8 +13866,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/recurring_slot"
-      x-methodName: list
-      x-belongsToResource: recurring_slot
+      x-methodName: listRecurring
+      x-belongsToResource: slot
   /v1/tags:
     post:
       summary: Create a Tag
@@ -24724,7 +24724,7 @@ components:
         Unlike most other resources in the Source API, slots are not stored. As a result, they do
         not have an identifier, nor do they trigger any kind of events. Instead, slots are
         dynamically calculated as needed based on the availability of people in your team.
-      x-resourceId: slot
+      x-resourceId: recurring_slot
       x-package: scheduling
     relationship:
       type: object
