--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -6036,9 +6036,9 @@ paths:
                       key:
                         type: string
                       value: {}
-                      values: {}
                     required:
                       - key
+                      - value
                   description:
                     The individual responses that capture the author's answers to corresponding
                     items within the form version. Each response is associated with the item key of
@@ -6322,9 +6322,9 @@ paths:
                       key:
                         type: string
                       value: {}
-                      values: {}
                     required:
                       - key
+                      - value
                   description:
                     The individual responses that capture the author's answers to corresponding
                     items within the form version. Each response is associated with the item key of
@@ -6403,6 +6403,58 @@ paths:
                     describe the updates you are making within this form version relative to
                     previous versions. The changelog is not visible to members and responders to the
                     form.
+                calculations:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      type:
+                        type: string
+                        default: calculation
+                        enum:
+                          - calculation
+                        example: calculation
+                      key:
+                        type: string
+                        minLength: 1
+                        maxLength: 255
+                        pattern: ^[a-zA-Z0-9_]+$
+                        description:
+                          Unique key of this item within the form. Used in responses and conditional
+                          logic.
+                        example: demographics_name
+                      title:
+                        type: string
+                        description:
+                          Display title of this question in the form, i.e. the question text itself.
+                        example: How do you feel today?
+                      expression:
+                        type: string
+                        description: Formula that should be evaluated for this calculation
+                        example: IF(yes_no_question, "True", "False")
+                      data_type:
+                        type: string
+                        enum:
+                          - number
+                          - string
+                          - date
+                          - date_time
+                        description: Expected data type returned from the formula
+                        example: string
+                    required:
+                      - type
+                      - key
+                      - title
+                      - expression
+                      - data_type
+                    description:
+                      A calculation to be performed on values within the form. This form node can be
+                      used to calculate a value for a field based on the values of questions or even
+                      other calculations.
+                  description:
+                    An array of items that describe the form version's content and configuration.
+                    Pages form the top-level item and contain additional elements, such as
+                    questions, display elements, and groups of items.
                 items:
                   type: array
                   items:
@@ -7244,6 +7296,8 @@ paths:
                                                   description:
                                                     Display label for this option. Must be unique
                                                     within the question.
+                                                score:
+                                                  type: number
                                               required:
                                                 - key
                                                 - label
@@ -7283,6 +7337,11 @@ paths:
                                             description:
                                               Control the input type of the single-select question.
                                             example: drop_down
+                                          scoring_method:
+                                            type: string
+                                            enum:
+                                              - none
+                                              - max
                                         required:
                                           - type
                                           - title
@@ -7353,6 +7412,8 @@ paths:
                                                   description:
                                                     Display label for this option. Must be unique
                                                     within the question.
+                                                score:
+                                                  type: number
                                               required:
                                                 - key
                                                 - label
@@ -7391,6 +7452,12 @@ paths:
                                             description:
                                               Control the input type of the multi-select question.
                                             example: checkbox
+                                          scoring_method:
+                                            type: string
+                                            enum:
+                                              - none
+                                              - max
+                                              - sum
                                         required:
                                           - type
                                           - title
@@ -8291,6 +8358,8 @@ paths:
                                         description:
                                           Display label for this option. Must be unique within the
                                           question.
+                                      score:
+                                        type: number
                                     required:
                                       - key
                                       - label
@@ -8326,6 +8395,11 @@ paths:
                                     - drop_down
                                   description: Control the input type of the single-select question.
                                   example: drop_down
+                                scoring_method:
+                                  type: string
+                                  enum:
+                                    - none
+                                    - max
                               required:
                                 - type
                                 - title
@@ -8395,6 +8469,8 @@ paths:
                                         description:
                                           Display label for this option. Must be unique within the
                                           question.
+                                      score:
+                                        type: number
                                     required:
                                       - key
                                       - label
@@ -8430,6 +8506,12 @@ paths:
                                     - checkbox
                                   description: Control the input type of the multi-select question.
                                   example: checkbox
+                                scoring_method:
+                                  type: string
+                                  enum:
+                                    - none
+                                    - max
+                                    - sum
                               required:
                                 - type
                                 - title
@@ -19464,6 +19546,64 @@ components:
             with the response cannot be changed after creation. Any updates to this response relate
             to this same form version.
           example: fv_ByJdV5tV3eJf6KRRfoGU
+        calculations:
+          type: array
+          items:
+            type: object
+            properties:
+              item:
+                type: object
+                properties:
+                  type:
+                    type: string
+                    default: calculation
+                    enum:
+                      - calculation
+                    example: calculation
+                  key:
+                    type: string
+                    minLength: 1
+                    maxLength: 255
+                    pattern: ^[a-zA-Z0-9_]+$
+                    description:
+                      Unique key of this item within the form. Used in responses and conditional
+                      logic.
+                    example: demographics_name
+                  title:
+                    type: string
+                    description:
+                      Display title of this question in the form, i.e. the question text itself.
+                    example: How do you feel today?
+                  expression:
+                    type: string
+                    description: Formula that should be evaluated for this calculation
+                    example: IF(yes_no_question, "True", "False")
+                  data_type:
+                    type: string
+                    enum:
+                      - number
+                      - string
+                      - date
+                      - date_time
+                    description: Expected data type returned from the formula
+                    example: string
+                required:
+                  - type
+                  - key
+                  - title
+                  - expression
+                  - data_type
+                description:
+                  A calculation to be performed on values within the form. This form node can be
+                  used to calculate a value for a field based on the values of questions or even
+                  other calculations.
+              value: {}
+            required:
+              - item
+              - value
+          description:
+            The individual responses that capture the author's answers to corresponding items within
+            the form version.
         responses:
           type: array
           items:
@@ -19473,13 +19613,17 @@ components:
                 $ref: "#/components/schemas/Question"
               response: {}
               value: {}
+              score:
+                type: number
+                nullable: true
             required:
               - item
               - response
               - value
+              - score
           description:
             The individual responses that capture the author's answers to corresponding items within
-            the form version.,
+            the form version.
         status:
           type: string
           enum:
@@ -19572,6 +19716,7 @@ components:
         - member
         - form
         - form_version
+        - calculations
         - responses
         - status
         - exit_screen
@@ -19643,6 +19788,53 @@ components:
             and configuration without the need to look up the form version separately.
           example: fv_ByJdV5tV3eJf6KRRfoGU
           nullable: true
+        calculations:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+                default: calculation
+                enum:
+                  - calculation
+                example: calculation
+              key:
+                type: string
+                minLength: 1
+                maxLength: 255
+                pattern: ^[a-zA-Z0-9_]+$
+                description:
+                  Unique key of this item within the form. Used in responses and conditional logic.
+                example: demographics_name
+              title:
+                type: string
+                description:
+                  Display title of this question in the form, i.e. the question text itself.
+                example: How do you feel today?
+              expression:
+                type: string
+                description: Formula that should be evaluated for this calculation
+                example: IF(yes_no_question, "True", "False")
+              data_type:
+                type: string
+                enum:
+                  - number
+                  - string
+                  - date
+                  - date_time
+                description: Expected data type returned from the formula
+                example: string
+            required:
+              - type
+              - key
+              - title
+              - expression
+              - data_type
+            description:
+              A calculation to be performed on values within the form. This form node can be used to
+              calculate a value for a field based on the values of questions or even other
+              calculations.
         items:
           type: array
           items:
@@ -20464,6 +20656,8 @@ components:
                                           description:
                                             Display label for this option. Must be unique within the
                                             question.
+                                        score:
+                                          type: number
                                       required:
                                         - key
                                         - label
@@ -20500,6 +20694,11 @@ components:
                                     description:
                                       Control the input type of the single-select question.
                                     example: drop_down
+                                  scoring_method:
+                                    type: string
+                                    enum:
+                                      - none
+                                      - max
                                 required:
                                   - type
                                   - title
@@ -20569,6 +20768,8 @@ components:
                                           description:
                                             Display label for this option. Must be unique within the
                                             question.
+                                        score:
+                                          type: number
                                       required:
                                         - key
                                         - label
@@ -20605,6 +20806,12 @@ components:
                                     description:
                                       Control the input type of the multi-select question.
                                     example: checkbox
+                                  scoring_method:
+                                    type: string
+                                    enum:
+                                      - none
+                                      - max
+                                      - sum
                                 required:
                                   - type
                                   - title
@@ -21495,6 +21702,8 @@ components:
                                 type: string
                                 description:
                                   Display label for this option. Must be unique within the question.
+                              score:
+                                type: number
                             required:
                               - key
                               - label
@@ -21529,6 +21738,11 @@ components:
                             - drop_down
                           description: Control the input type of the single-select question.
                           example: drop_down
+                        scoring_method:
+                          type: string
+                          enum:
+                            - none
+                            - max
                       required:
                         - type
                         - title
@@ -21596,6 +21810,8 @@ components:
                                 type: string
                                 description:
                                   Display label for this option. Must be unique within the question.
+                              score:
+                                type: number
                             required:
                               - key
                               - label
@@ -21629,6 +21845,12 @@ components:
                             - checkbox
                           description: Control the input type of the multi-select question.
                           example: checkbox
+                        scoring_method:
+                          type: string
+                          enum:
+                            - none
+                            - max
+                            - sum
                       required:
                         - type
                         - title
@@ -21845,6 +22067,7 @@ components:
         - changelog
         - version
         - previous_version
+        - calculations
         - items
         - exit_screens
         - created_at
@@ -24435,6 +24658,8 @@ components:
                   label:
                     type: string
                     description: Display label for this option. Must be unique within the question.
+                  score:
+                    type: number
                 required:
                   - key
                   - label
@@ -24469,6 +24694,11 @@ components:
                 - drop_down
               description: Control the input type of the single-select question.
               example: drop_down
+            scoring_method:
+              type: string
+              enum:
+                - none
+                - max
           required:
             - type
             - title
@@ -24528,6 +24758,8 @@ components:
                   label:
                     type: string
                     description: Display label for this option. Must be unique within the question.
+                  score:
+                    type: number
                 required:
                   - key
                   - label
@@ -24561,6 +24793,12 @@ components:
                 - checkbox
               description: Control the input type of the multi-select question.
               example: checkbox
+            scoring_method:
+              type: string
+              enum:
+                - none
+                - max
+                - sum
           required:
             - type
             - title
