Pushing v260 from API 8ce20db189a0bd28f6e9ba61e52cf372e3f53f30

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4606,6 +4606,13 @@ paths:
                     order to find an assignee. This queue overrides any queue specified in the task
                     definition for open encounters. You can always change the queue for a given task
                     once that task has been created.
+                quick:
+                  type: boolean
+                  description:
+                    Whether or not the encounter type is available for users to create ad hoc
+                    encounters in the Source Clinical UI without first booking an appointment or
+                    receiving a form response. If not specified, by default, the encounter type is
+                    not available in the Clinical UI for creating ad hoc encounters.
               required:
                 - key
                 - name
@@ -4732,6 +4739,21 @@ paths:
             description: Limit results to encounters with name containing the given query.
           required: false
           description: Limit results to encounters with name containing the given query.
+        - in: query
+          style: form
+          explode: true
+          name: quick
+          schema:
+            type: boolean
+            description:
+              Filter encounter types to only those whose quick status matches the provided value. By
+              default, this operation return all encounter types. You may pass `quick=true` to show
+              quick encounter types, or `quick=false` to show non quick encounter types.
+          required: false
+          description:
+            Filter encounter types to only those whose quick status matches the provided value. By
+            default, this operation return all encounter types. You may pass `quick=true` to show
+            quick encounter types, or `quick=false` to show non quick encounter types.
       responses:
         default:
           description: Successful response.
@@ -4820,6 +4842,13 @@ paths:
                     order to find an assignee. This queue overrides any queue specified in the task
                     definition for open encounters. You can always change the queue for a given task
                     once that task has been created.
+                quick:
+                  type: boolean
+                  description:
+                    Whether or not the encounter type is available for users to create ad hoc
+                    encounters in the Source Clinical UI without first booking an appointment or
+                    receiving a form response. If not specified, by default, the encounter type is
+                    not available in the Clinical UI for creating ad hoc encounters.
       responses:
         default:
           description: Successful response.
@@ -18855,6 +18884,13 @@ components:
             been created.
           example: que_6NGuKD4KdMCGXLP6uBda
           nullable: true
+        quick:
+          type: boolean
+          description:
+            Whether or not the encounter type is available for users to create ad hoc encounters in
+            the Source Clinical UI without first booking an appointment or receiving a form
+            response. If not specified, by default, the encounter type is not available in the
+            Clinical UI for creating ad hoc encounters.
         created_at:
           type: string
           format: date-time
@@ -18878,6 +18914,7 @@ components:
         - name
         - description
         - queue
+        - quick
         - created_at
         - updated_at
         - archived_at
